--- a/src/style/globals.scss
+++ b/src/style/globals.scss
@@ -1,3 +1,11 @@
+@import "~bulma/sass/utilities/_all";
+@import "colors.scss";
+
+body{
+	margin: 0px;
+	padding: 0px;
+}
+
 .hero{
 	margin: 1em 0;
 }
