--- a/src/renderer/styles/_globals.scss
+++ b/src/renderer/styles/_globals.scss
@@ -1,6 +1,3 @@
-@import "~bulma/sass/utilities/_all";
-
-
 @import url('https://fonts.googleapis.com/css?family=Questrial');
 
 $color-shadeLight: #f1f0f2;
@@ -8,21 +5,13 @@ $color-accentLight: #8fc8e6;
 $color-main: #2982c5;
 $color-shadeDark: #274c76;
 $color-accentDark: #5d6a89;
-
-$colors: (
-    "white": ($white, $black),
-    "black": ($black, $white),
-    "light": ($color-shadeLight, $color-accentLight),
-    "dark": ($color-shadeDark, $color-accentDark),
-    "primary": ($color-main, $color-shadeLight),
-    "info": ($info, $info-invert),
-    "success": ($success, $success-invert),
-    "warning": ($warning, $warning-invert),
-    "danger": ($danger, $danger-invert)
-);
-
 $color-textDark: $color-shadeDark;
 $color-textLight: $color-shadeLight;
+
+//Override Bootstrap Variables
+$primary: $color-main;
+$secondary: $color-shadeDark;
+$info: $color-accentLight;
 
 body{
 	margin: 0px;
@@ -30,15 +19,8 @@ body{
 	font-family: 'Questrial', sans-serif !important;
 }
 
-.hero{
-	margin: 1em 0;
-}
-
+//Import state scss
 @import 
 	"states/ExportList",
 	"states/Logo",
 	"states/ExportProcess";
-
-@import "~bulma";
-@import "~buefy/src/scss/buefy";
-
