--- a/src/renderer/styles/states/ExportProcess.scss
+++ b/src/renderer/styles/states/ExportProcess.scss
@@ -1,7 +1,7 @@
 .column {
 	height: 5em;
-	background: $color-main;
-	color: $color-textLight;
+	background: color("primary");
+	color: color("light");
 	padding: 1.25em;
 	margin: 1em;
 	font-size: 170%;
