Added vue config file to hopefully inject sass variables into all compiles

--- a/src/renderer/styles/_globals.scss
+++ b/src/renderer/styles/_globals.scss
@@ -20,7 +20,7 @@ body{
 }
 
 //Import state scss
-@import 
-	"states/ExportList",
-	"states/Logo",
-	"states/ExportProcess";
+// @import 
+// 	"states/ExportList",
+// 	"states/Logo",
+// 	"states/ExportProcess";
