Getting a few things set up for transitions, working on error handling on the export list which should resolve itself once we do some validation on the filePaths page.

--- a/src/renderer/styles/_globals.scss
+++ b/src/renderer/styles/_globals.scss
@@ -19,6 +19,14 @@ body{
 	font-family: 'Questrial', sans-serif !important;
 }
 
+.stateTransition-enter-active, .stateTransition-leave-active{
+	transition: opacity .5s;
+}
+
+.stateTransition-enter, .stateTransition-leave-to{
+	opacity: 0;
+}
+
 //Import state scss
 @import 
 	"states/ExportList",
