--- a/src/renderer/styles/elements/navigation.scss
+++ b/src/renderer/styles/elements/navigation.scss
@@ -1,18 +1,61 @@
 #navigation{
 	position: fixed;
 	bottom: 0px;
-	height: 3em;
-	background: $color-accentDark;
+	height: 4.2em;
+	max-height: 10vh;
+	background-image: url(/static/backgrounds/cardboard.png);
+	background-color: $color-accentDark;
 	width: 100%;
+	overflow: hidden;
+	border-top: 2px solid $color-accentLight;
 
 	.navSection{
 		padding: 0;
 		height: 3em;
 
-		.btn{}
+		.btn{
+			height: 140%;
+			width: 50%;
+			max-width: 110px;
+			overflow: hidden;
+			margin: 0 2em;
+			
+			svg{
+				font-size: 200%;
+				position: absolute;
+				opacity: .4;
+				top: 0%;
+				width: 100%;
+			}
+			&__text{
+				position: absolute;
+				width: 100%;
+				bottom: .3em;
+			}
+		}
 	}
 
-	.navLeft{}
+	.navLeft{
+		.btn{
+			transform: skewX(225deg);
+			>*{transform: skewX(-45deg);}
+			&__text{
+				left: -10%;
+				text-align: right;
+			}
+			svg{left: -20%;}
+		}
+	}
 
-	.navRight{}
+	.navRight{
+		.btn{
+			transform: skewX(315deg);
+			>*{transform: skewX(-135deg);}
+			&__text{
+				right: -10%;
+				text-align: left;
+			}
+			svg{right: -20%;}
+		}
+	}
 }
