Cleaning things up, adding transitions for multiple nav items

--- a/src/renderer/styles/elements/navigation.scss
+++ b/src/renderer/styles/elements/navigation.scss
@@ -15,10 +15,9 @@
 
 		.btn{
 			height: 140%;
-			width: 50%;
 			max-width: 110px;
 			overflow: hidden;
-			//margin: 0 2em;
+			margin: 0 .5em;
 			
 			svg{
 				font-size: 200%;
