Added new sorta crap logo

--- a/src/renderer/styles/_globals.scss
+++ b/src/renderer/styles/_globals.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Questrial');
+@import url('https://fonts.googleapis.com/css?family=Questrial|Righteous');
 
 $color-shadeLight: #E7E5DF;
 $color-accentLight: #E8C871;
