--- a/src/renderer/styles/states/Logo.scss
+++ b/src/renderer/styles/states/Logo.scss
@@ -1,13 +1,17 @@
-.logo, .logo__image, .logo__section{
-	//transition: all .5s;
-}
-
 .logo {
 	border-bottom: 2px solid $color-accentLight;
-	
 	height: 20vh;
+	z-index: 10;
 
-	> *{
+	&.fullScreen{
+		height: 100vh;
+	}
+
+	&__overflow{
+		overflow: hidden;
+		position: relative;
+		width: 100%;
+		height: 100%;
 		display: flex;
 		align-items: center;
 		justify-content: center;
@@ -27,6 +31,10 @@
 			fill: $color-shadeDark;
 			.cls-5{fill: $color-accentLight;}
 		}
+
+		&.fullScreen{
+			width: 100%;
+		}
 	}
 
 	&__section{
@@ -35,8 +43,14 @@
 		color: $color-shadeDark;
 		font-size: 2em;
 
+		height: 100%;
+
 		width: 66.6666%;
 		overflow: hidden;
+
+		&.fullScreen{
+			width: 0%;
+		}
 
 		span{
 			position: absolute;
